make 'splash activity' and 'main activity' but main activity doesn't designed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">client2_repo</string>
+    <string name="copyright">Copyright 2018. Gachon Univ.</string>
 </resources>
